plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id "com.diffplug.spotless" version "6.25.0"
}

spotless {
    java {
        googleJavaFormat()
        removeUnusedImports()
    }
}

group = 'com.ssafy.keeping'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    mavenLocal()  // Monolith의 Stub JAR를 로컬 Maven에서 가져옴
}

// Spring Cloud 버전 관리
dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2024.0.0"
    }
}

dependencies {
    // Spring Boot 기본
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // HTTP 커넥션 풀 (RestClient/RestTemplate가 쓰는 ClientHttpRequestFactory 엔진)
    // 버전은 Spring Boot BOM이 관리
    implementation 'org.apache.httpcomponents.client5:httpclient5'

    // JPA + MySQL
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Redis (QR 토큰 저장)
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // ShedLock (분산 스케줄러 락)
    implementation 'net.javacrumbs.shedlock:shedlock-spring:5.16.0'
    implementation 'net.javacrumbs.shedlock:shedlock-provider-redis-spring:5.16.0'

    // Validation (@Valid 어노테이션)
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // JWT (토큰 검증)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // UUID v7 생성
    implementation 'com.github.f4b6a3:uuid-creator:5.3.3'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Actuator (헬스체크)
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // Resilience4j (Circuit Breaker + Retry)
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // Micrometer Tracing (Spring Boot 3.x)
    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
    implementation 'io.zipkin.reporter2:zipkin-reporter-brave'

    // OpenAPI 문서화
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // Contract Testing - WireMock
    testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'
}

tasks.named('test') {
    useJUnitPlatform()
}

// ===== 커넥션 풀 부하테스트 (src/test의 loadtest 패키지) =====
// 사용 예:
//   ./gradlew loadStub  -PappArgs="8080"
//   ./gradlew loadBench -PappArgs="http://localhost:8080/internal/stores/1 nopool 200 30"
//   ./gradlew loadBench -PappArgs="http://localhost:8080/internal/stores/1 pooled 200 30"
tasks.register('loadStub', JavaExec) {
    group = 'loadtest'
    description = 'monolith 역할 스텁 서버 실행 (DB 불필요)'
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.ssafy.keeping.qr.loadtest.StubMonolith'
    if (project.hasProperty('appArgs')) {
        args(((String) project.property('appArgs')).split('\\s+'))
    }
}

tasks.register('loadBench', JavaExec) {
    group = 'loadtest'
    description = '풀 ON(pooled)/OFF(nopool) 부하 벤치마크'
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.ssafy.keeping.qr.loadtest.PoolBenchmark'
    if (project.hasProperty('appArgs')) {
        args(((String) project.property('appArgs')).split('\\s+'))
    }
}
